# statistics-lab-2024-25

./: .gitignore  README.md  main.py  pyproject.toml
Numpy/: 01-Introduction-to-numpy.ipynb  02 - Understanding Types.ipynb  03-Basics-of-numpy-array.ipynb  04 - Computation_1.ipynb  05 - Computation-on-arrays-aggregates.ipynb  05-Computation-on-arrays-aggregates.ipynb  06-Computation-on-arrays-broadcasting.ipynb  07-Boolean-arrays-and-masks.ipynb  08-Fancy-indexing.ipynb
statistics/: 00-Examples-of-sampling-distributions.ipynb  01-Exploratory-data-analysis.ipynb  02-Expectation.ipynb  03-Inequalities.ipynb  04-Estimating-the-CDF-and-statistical-functionals.ipynb
