[project]
name = "statistics-lab-2024-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "wquantiles>=0.6",
]
